# nms_namegen

./: .gitignore  LICENCE  Pipfile  README.md  namegen.py  pyproject.toml
nms_namegen/: generator.py  iprng.py  planet.py  prng.py  region.py  roman.py  system.py
test/: agt data results  test_attributes_cli.py  test_generator.py  test_nms_namegen.py  test_planet.py  test_region.py  test_system.py  test_system_attributes.py
test/fixtures/: region_names.json  system_names.json
